[AM]: added additional classes to help with search queries

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <div class="men-results">
                 <h2 class="result-section-title">Men</h2>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer1.jpg"
                     alt=""
@@ -105,7 +105,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer2.jpg"
                     alt=""
@@ -120,7 +120,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer3.jpg"
                     alt=""
@@ -135,7 +135,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer4.jpg"
                     alt=""
@@ -150,7 +150,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result adidas men">
                   <img
                     src="Images/MaleTrainers/maleTrainer5.jpg"
                     alt=""
@@ -165,7 +165,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer6.jpg"
                     alt=""
@@ -180,7 +180,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer7.jpg"
                     alt=""
@@ -195,7 +195,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer8.jpg"
                     alt=""
@@ -210,7 +210,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer9.jpg"
                     alt=""
@@ -225,7 +225,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result jordan men">
                   <img
                     src="Images/MaleTrainers/maleTrainer10.jpg"
                     alt=""
@@ -240,7 +240,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer11.jpg"
                     alt=""
@@ -255,7 +255,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer12.jpg"
                     alt=""
@@ -270,7 +270,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result adidas men">
                   <img
                     src="Images/MaleTrainers/maleTrainer13.jpg"
                     alt=""
@@ -285,7 +285,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result adidas men">
                   <img
                     src="Images/MaleTrainers/maleTrainer14.jpg"
                     alt=""
@@ -300,7 +300,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer15.jpg"
                     alt=""
@@ -315,7 +315,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result jordan men">
                   <img
                     src="Images/MaleTrainers/maleTrainer16.jpg"
                     alt=""
@@ -330,7 +330,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer17.jpg"
                     alt=""
@@ -345,7 +345,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result jordan men">
                   <img
                     src="Images/MaleTrainers/maleTrainer18.jpg"
                     alt=""
@@ -360,7 +360,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer19.jpg"
                     alt=""
@@ -375,7 +375,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike men">
                   <img
                     src="Images/MaleTrainers/maleTrainer20.jpg"
                     alt=""
@@ -390,7 +390,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result jordan men">
                   <img
                     src="Images/MaleTrainers/maleTrainer21.jpg"
                     alt=""
@@ -412,7 +412,7 @@
               <div class="women-results">
                 <h2 class="result-section-title">Women</h2>
 
-                <div class="result">
+                <div class="result nike women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer1.jpg"
                     alt=""
@@ -427,7 +427,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result puma women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer2.jpg"
                     alt=""
@@ -442,7 +442,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer3.jpg"
                     alt=""
@@ -457,7 +457,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer4.jpg"
                     alt=""
@@ -472,7 +472,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result dunlope women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer5.jpg"
                     alt=""
@@ -480,14 +480,14 @@
                   />
 
                   <div class="trainer-details">
-                    <h4 class="result-title">Dunlop Platform</h4>
+                    <h4 class="result-title">Dunlope Platform</h4>
                     <h4 class="trainer-size">Size: 4 uk</h4>
                     <h4 class="result-price">£30</h4>
                     <a href="#" class="view-btn">view</a>
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer6.jpg"
                     alt=""
@@ -502,7 +502,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result rebok women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer7.jpg"
                     alt=""
@@ -517,7 +517,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result adidas women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer8.jpg"
                     alt=""
@@ -532,7 +532,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer9.jpg"
                     alt=""
@@ -547,7 +547,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer10.jpg"
                     alt=""
@@ -562,7 +562,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer11.jpg"
                     alt=""
@@ -577,7 +577,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer12.jpg"
                     alt=""
@@ -592,7 +592,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result adidas women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer13.jpg"
                     alt=""
@@ -607,7 +607,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result adidas women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer14.jpg"
                     alt=""
@@ -622,7 +622,7 @@
                   </div>
                 </div>
 
-                <div class="result">
+                <div class="result nike women">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer15.jpg"
                     alt=""
