[AM]: Structured and styled comment form

--- a/contact.html
+++ b/contact.html
@@ -1,63 +1,88 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <meta charset="utf-8" />
     <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
 
     <title>contact</title>
-    <link rel="stylesheet" href="contactStyle.css">
+    <link rel="stylesheet" href="contactStyle.css" />
     <!-- Font Awesome Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- Google Icons Link -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
-
     <!-------------------------------------
     Header including navigation bar and logo
     --------------------------------------->
 
     <header class="header">
+      <nav class="nav-container">
+        <a class="nav-btn" href="#"
+          ><i class="material-icons">view_headline</i></a
+        >
 
+        <ul id="navMenu" class="navList">
+          <a href="#" class="nav-close-btn"
+            ><i class="fa fa-close fa-1x"></i
+          ></a>
+          <li class="nav-icon homeIcon">
+            <a href="index.html"><i class="material-icons">home</i></a>
+          </li>
 
-        <nav class="nav-container">
-  
-       <a  class="nav-btn" href="#"><i class="material-icons ">view_headline</i></a>
-  
-          <ul id="navMenu" class="navList">
-            <a href="#" class="nav-close-btn"><i class="fa fa-close fa-1x"></i></a>
-            <li class="nav-icon homeIcon"><a  href="index.html"><i class="material-icons ">home</i></a></li>
-  
-            <li class="nav-icon aboutIcon">  <a  href="about.html"><i class="material-icons ">description</i></a></li>
-  
-            <li class=" nav-icon sellIcon"> <a  href="sell.html"><i class="material-icons ">local_atm</i></a></li>
-  
-            <li class=" nav-icon shopIcon" ><a  href="#"><i class="material-icons ">local_mall</i></a></li>
-  
-          </ul>
-        </nav>
-  
-        <img src="/Images/silverHandsLogo.png" class="logo" alt="Silver Hand UK Logo">
-  
-  <!-- Search bar and cart -->
-  
-       <div class="search-and-cart-container">
-  
-           <div class="search-container">
-             <a href="#" class="search-btn"><i class="fa fa-search"></i></a>
-  
-             <div class="search-bar">
-               <a href="#" class="close-search-btn"><i class="fa fa-close fa-1x"></i></a>
-  
-               <input id="userInput" class="userInput"placeholder="Search products..." type="text">
-  
-               <div class="result-container">
-  
-                <!-- <div class="result">
+          <li class="nav-icon aboutIcon">
+            <a href="about.html"><i class="material-icons">description</i></a>
+          </li>
+
+          <li class="nav-icon sellIcon">
+            <a href="sell.html"><i class="material-icons">local_atm</i></a>
+          </li>
+
+          <li class="nav-icon shopIcon">
+            <a href="#"><i class="material-icons">local_mall</i></a>
+          </li>
+        </ul>
+      </nav>
+
+      <img
+        src="/Images/silverHandsLogo.png"
+        class="logo"
+        alt="Silver Hand UK Logo"
+      />
+
+      <!-- Search bar and cart -->
+
+      <div class="search-and-cart-container">
+        <div class="search-container">
+          <a href="#" class="search-btn"><i class="fa fa-search"></i></a>
+
+          <div class="search-bar">
+            <a href="#" class="close-search-btn"
+              ><i class="fa fa-close fa-1x"></i
+            ></a>
+
+            <input
+              id="userInput"
+              class="userInput"
+              placeholder="Search products..."
+              type="text"
+            />
+
+            <div class="result-container">
+              <!-- <div class="result">
                  <img src="Images/MaleTrainers/maleTrainer1.jpg" alt="" class="result-img">
   
                  <div class="trainer-details">
@@ -67,17 +92,12 @@
                  <a href="#" class="view-btn">view</a>
                  </div>
                 </div> -->
-                 
-  
-               </div>
-  
-             </div>
-  
-           </div>
-  
-           <a href='#'><i class="fa fa-cart-plus"></i></a>
-       </div>
+            </div>
+          </div>
+        </div>
 
+        <a href="#"><i class="fa fa-cart-plus"></i></a>
+      </div>
     </header>
 
     <!------------------
@@ -95,58 +115,111 @@
                Icons
       ------------------------->
 
-      <main class="main">
-
-        <!----------------------
+    <main class="main">
+      <!----------------------
               comment form
            -------------------->
 
+      <h1 class="form-title">Comment form</h1>
 
-          <h1 class="form-title">Comments</h1>
+      <form action="" class="comment-form">
+        <label class="first-name-label" for="first-name">First Name: </label>
+        <input type="text" placeholder="First Name" class="first-name" />
 
-          
+        <label class="last-name-label" for="last-name">Last Name: </label>
+        <input type="text" placeholder="Last Name" class="last-name" />
 
-        <!------------------------
-                   icons
+        <label class="email-label" for="email">Email: </label>
+        <input type="email" placeholder="please provide email" class="email" />
+
+        <label class="phone-label" for="phone-number">Phone: </label>
+        <input type="text" class="phone-number" placeholder="type number" />
+
+        <label class="comment-label" for="comment">Comment: </label>
+        <textarea
+          class="comment"
+          placeholder="please leave a comment..."
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+        ></textarea>
+
+        <a href="#" class="form-submit-btn">Submit</a>
+      </form>
+
+      <!------------------------
+                   Icons
           ------------------------>
 
-      <h1 class="page-title">Contact</h1>
+      <h1 class="page-title">Contact us</h1>
 
       <div class="icon-container">
-        <a class = 'facebook-icon' href="https://facebook.com/SilverHandUK" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
+        <a
+          class="facebook-icon"
+          href="https://facebook.com/SilverHandUK"
+          target="_blank"
+          ><i class="fa fa-facebook fa-2x"></i
+        ></a>
 
-        <a class = 'instagram-icon' href="https://instagram.com/SilverHandUK" target="_blank"><i class="fa fa-instagram fa-3x"></i></a>
+        <a
+          class="instagram-icon"
+          href="https://instagram.com/SilverHandUK"
+          target="_blank"
+          ><i class="fa fa-instagram fa-2x"></i
+        ></a>
 
-        <a class = 'twitter-icon' href="https://twitter.com/SilverHandUK" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
+        <a
+          class="twitter-icon"
+          href="https://twitter.com/SilverHandUK"
+          target="_blank"
+          ><i class="fa fa-twitter fa-2x"></i
+        ></a>
 
-        <a class = 'envelope-icon' href=""><i class="fa fa-envelope fa-3x"></i></a>
+        <a class="envelope-icon" href=""
+          ><i class="fa fa-envelope fa-2x"></i
+        ></a>
 
-        <a class = 'phone-icon' href=""><i class="fa fa-phone fa-3x"></i></a>
+        <a class="phone-icon" href=""><i class="fa fa-phone fa-2x"></i></a>
       </div>
-
-      </main>
-
+    </main>
 
     <!-----------------------------
           Footer With Icons
      ----------------------------->
 
     <footer class="footer">
-
       <div class="footerHI">
-      <h3>Connect with us</h3>
+        <h3>Connect with us</h3>
 
-      <!-- ICONS CONTAINER -->
-      <div class="icons">
-        <a href="https://twitter.com/SilverHandUK" title='Twitter' target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
-        <a href="https://facebook.com/SilverHandUK" title="Facebook" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-        <a href="https://instagram.com/SilverHandUK" title="Instagram" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+        <!-- ICONS CONTAINER -->
+        <div class="icons">
+          <a
+            href="https://twitter.com/SilverHandUK"
+            title="Twitter"
+            target="_blank"
+            ><i class="fa fa-twitter fa-2x"></i
+          ></a>
+          <a
+            href="https://facebook.com/SilverHandUK"
+            title="Facebook"
+            target="_blank"
+            ><i class="fa fa-facebook-square fa-2x"></i
+          ></a>
+          <a
+            href="https://instagram.com/SilverHandUK"
+            title="Instagram"
+            target="_blank"
+            ><i class="fa fa-instagram fa-2x"></i
+          ></a>
+        </div>
       </div>
-      </div>
-      <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
-
+      <img
+        src="/Images/silverHandsLogo.png"
+        class="logo"
+        alt="silver hand uk logo"
+      />
     </footer>
     <script src="about.js"></script>
-
   </body>
 </html>
