--- a/contact.html
+++ b/contact.html
@@ -176,11 +176,11 @@
           ><i class="fa fa-twitter fa-2x"></i
         ></a>
 
-        <a class="envelope-icon" href=""
+        <a class="envelope-icon" href="#"
           ><i class="fa fa-envelope fa-2x"></i
         ></a>
 
-        <a class="phone-icon" href=""><i class="fa fa-phone fa-2x"></i></a>
+        <a class="phone-icon" href="#"><i class="fa fa-phone fa-2x"></i></a>
       </div>
     </main>
 
