[AM]: added and styled hero section

--- a/shop.html
+++ b/shop.html
@@ -645,5 +645,14 @@
         <a href="#"><i class="fa fa-cart-plus"></i></a>
       </div>
     </header>
+    <!----------------------
+             Hero  
+     ----------------------->
+
+    <div class="hero">
+      <div class="dark-filter">
+        <h1 class="page-title">Shop</h1>
+      </div>
+    </div>
   </body>
 </html>
