[AM]: Created filter list

--- a/shop.html
+++ b/shop.html
@@ -654,5 +654,114 @@
         <h1 class="page-title">Shop</h1>
       </div>
     </div>
+
+    <!-------------------------
+          Main section  
+     -------------------------->
+
+    <main class="main">
+      <!-- Filter Container -->
+
+      <div class="filters-container">
+        <a href="#" class="filter-btn"
+          >Filter<i class="fa fa-chevron-down"></i
+        ></a>
+        <ul class="filter-list">
+          <li class="filter-item">
+            <!-- brand filter -->
+            <a href="#" class="brand-btn"
+              >Brands <i class="fa fa-chevron-down"></i
+            ></a>
+            <ul class="brands-list">
+              <li class="brand-item">
+                <a href="#" class="nike-filter-btn brand-filter-btn">Nike</a>
+              </li>
+              <li class="brand-item">
+                <a href="#" class="adidas-filter-btn brand-filter-btn"
+                  >Adidas</a
+                >
+              </li>
+              <li class="brand-item">
+                <a href="#" class="other-filter-btn brand-filter-btn">Other</a>
+              </li>
+            </ul>
+          </li>
+          <li class="filter-item">
+            <!-- gender filter -->
+            <a href="#" class="gender-btn"
+              >Gender <i class="fa fa-chevron-down"></i
+            ></a>
+            <ul class="gender-list">
+              <li class="gender-item">
+                <a href="#" class="male-filter-btn gender-filter-btn">Male</a>
+              </li>
+              <li class="gender-item">
+                <a href="#" class="female-filter-btn gender-filter-btn"
+                  >Female</a
+                >
+              </li>
+              <li class="gender-item">
+                <a href="#" class="kids-filter-btn gender-filter-btn">Kids</a>
+              </li>
+            </ul>
+          </li>
+          <li class="filter-item">
+            <!-- style filter -->
+            <a href="#" class="style-btn"
+              >Style <i class="fa fa-chevron-down"></i
+            ></a>
+            <ul class="style-list">
+              <li class="style-item">
+                <a href="#" class="sport-filter-btn style-filter-btn">Sport</a>
+              </li>
+              <li class="style-item">
+                <a href="" class="fashion-filter-btn style-filter-btn"
+                  >Fashion</a
+                >
+              </li>
+              <li class="style-item">
+                <a href="#" class="smart-filter-btn style-filter-btn">Smart</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </main>
+    <!-----------------------------
+          Footer With Icons
+     ----------------------------->
+
+    <footer class="footer">
+      <div class="footerHI">
+        <h3>Connect with us</h3>
+
+        <!-- ICONS CONTAINER -->
+        <div class="icons">
+          <a
+            href="https://twitter.com/SilverHandUK"
+            title="Twitter"
+            target="_blank"
+            ><i class="fa fa-twitter fa-2x"></i
+          ></a>
+          <a
+            href="https://facebook.com/SilverHandUK"
+            title="Facebook"
+            target="_blank"
+            ><i class="fa fa-facebook-square fa-2x"></i
+          ></a>
+          <a
+            href="https://instagram.com/SilverHandUK"
+            title="Instagram"
+            target="_blank"
+            ><i class="fa fa-instagram fa-2x"></i
+          ></a>
+        </div>
+      </div>
+      <img
+        src="/Images/silverHandsLogo.png"
+        class="logo"
+        alt="silver hand uk logo"
+      />
+    </footer>
   </body>
 </html>
