[AM]: created and linked shop.js file

--- a/shop.html
+++ b/shop.html
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <script src="about.js" defer></script>
+    <script src="shop.js" defer></script>
   </head>
   <body>
     <!-------------------------------------
