[AM]: Gave functionality to all filter buttons

--- a/shop.html
+++ b/shop.html
@@ -667,13 +667,13 @@
         <a href="#" class="filter-btn"
           >Filter<i class="fa fa-chevron-down"></i
         ></a>
-        <ul class="filter-list">
+        <ul class="filter-list hide">
           <li class="filter-item">
             <!-- brand filter -->
             <a href="#" class="brand-btn"
               >Brands <i class="fa fa-chevron-down"></i
             ></a>
-            <ul class="brands-list">
+            <ul class="brands-list hide">
               <li class="brand-item">
                 <a href="#" class="nike-filter-btn brand-filter-btn">Nike</a>
               </li>
@@ -692,7 +692,7 @@
             <a href="#" class="gender-btn"
               >Gender <i class="fa fa-chevron-down"></i
             ></a>
-            <ul class="gender-list">
+            <ul class="gender-list hide">
               <li class="gender-item">
                 <a href="#" class="male-filter-btn gender-filter-btn">Male</a>
               </li>
@@ -711,7 +711,7 @@
             <a href="#" class="style-btn"
               >Style <i class="fa fa-chevron-down"></i
             ></a>
-            <ul class="style-list">
+            <ul class="style-list hide">
               <li class="style-item">
                 <a href="#" class="sport-filter-btn style-filter-btn">Sport</a>
               </li>
