[AM]: Added button effect

--- a/shop.html
+++ b/shop.html
@@ -667,65 +667,74 @@
         <a href="#" class="filter-btn"
           >Filter<i class="fa fa-chevron-down"></i
         ></a>
-        <ul class="filter-list hide">
-          <li class="filter-item">
-            <!-- brand filter -->
-            <a href="#" class="brand-btn"
-              >Brands <i class="fa fa-chevron-down"></i
-            ></a>
-            <ul class="brands-list hide">
-              <li class="brand-item">
-                <a href="#" class="nike-filter-btn brand-filter-btn">Nike</a>
-              </li>
-              <li class="brand-item">
-                <a href="#" class="adidas-filter-btn brand-filter-btn"
-                  >Adidas</a
-                >
-              </li>
-              <li class="brand-item">
-                <a href="#" class="other-filter-btn brand-filter-btn">Other</a>
-              </li>
-            </ul>
-          </li>
-          <li class="filter-item">
-            <!-- gender filter -->
-            <a href="#" class="gender-btn"
-              >Gender <i class="fa fa-chevron-down"></i
-            ></a>
-            <ul class="gender-list hide">
-              <li class="gender-item">
-                <a href="#" class="male-filter-btn gender-filter-btn">Male</a>
-              </li>
-              <li class="gender-item">
-                <a href="#" class="female-filter-btn gender-filter-btn"
-                  >Female</a
-                >
-              </li>
-              <li class="gender-item">
-                <a href="#" class="kids-filter-btn gender-filter-btn">Kids</a>
-              </li>
-            </ul>
-          </li>
-          <li class="filter-item">
-            <!-- style filter -->
-            <a href="#" class="style-btn"
-              >Style <i class="fa fa-chevron-down"></i
-            ></a>
-            <ul class="style-list hide">
-              <li class="style-item">
-                <a href="#" class="sport-filter-btn style-filter-btn">Sport</a>
-              </li>
-              <li class="style-item">
-                <a href="" class="fashion-filter-btn style-filter-btn"
-                  >Fashion</a
-                >
-              </li>
-              <li class="style-item">
-                <a href="#" class="smart-filter-btn style-filter-btn">Smart</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+        <div class="filter-main">
+          <ul class="filter-list">
+            <li class="filter-item">
+              <!-- brand filter -->
+              <a href="#" class="brand-btn"
+                >Brands <i class="fa fa-chevron-down"></i
+              ></a>
+              <ul class="brands-list">
+                <li class="brand-item">
+                  <a href="#" class="nike-filter-btn brand-filter-btn">Nike</a>
+                </li>
+                <li class="brand-item">
+                  <a href="#" class="adidas-filter-btn brand-filter-btn"
+                    >Adidas</a
+                  >
+                </li>
+                <li class="brand-item">
+                  <a href="#" class="other-filter-btn brand-filter-btn"
+                    >Other</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="filter-item">
+              <!-- gender filter -->
+              <a href="#" class="gender-btn"
+                >Gender <i class="fa fa-chevron-down"></i
+              ></a>
+              <ul class="gender-list">
+                <li class="gender-item">
+                  <a href="#" class="male-filter-btn gender-filter-btn">Male</a>
+                </li>
+                <li class="gender-item">
+                  <a href="#" class="female-filter-btn gender-filter-btn"
+                    >Female</a
+                  >
+                </li>
+                <li class="gender-item">
+                  <a href="#" class="kids-filter-btn gender-filter-btn">Kids</a>
+                </li>
+              </ul>
+            </li>
+            <li class="filter-item">
+              <!-- style filter -->
+              <a href="#" class="style-btn"
+                >Style <i class="fa fa-chevron-down"></i
+              ></a>
+              <ul class="style-list">
+                <li class="style-item">
+                  <a href="#" class="sport-filter-btn style-filter-btn"
+                    >Sport</a
+                  >
+                </li>
+                <li class="style-item">
+                  <a href="" class="fashion-filter-btn style-filter-btn"
+                    >Fashion</a
+                  >
+                </li>
+                <li class="style-item">
+                  <a href="#" class="smart-filter-btn style-filter-btn"
+                    >Smart</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <a href="#" class="apply-filter-btn">Apply</a>
+        </div>
       </div>
     </main>
     <!-----------------------------
