--- a/shop.html
+++ b/shop.html
@@ -736,6 +736,371 @@
           <a href="#" class="apply-filter-btn">Apply</a>
         </div>
       </div>
+
+      <!-- collection -->
+
+      <div class="collection-wrapper">
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer1.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name">Nike Airmax 720</h3>
+          <h3 class="collection-item-price">£80</h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer2.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name">Nike Airforce 1 reflect</h3>
+          <h3 class="collection-item-price">£60</h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer3.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer4.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer5.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer6.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer7.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer8.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer9.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer10.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer11.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer12.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer13.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer14.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer15.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer16.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer17.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer18.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer19.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer20.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/MaleTrainers/maleTrainer21.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer1.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer2.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer3.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer4.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer5.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer6.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer7.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer8.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer9.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer10.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer11.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer12.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer13.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer14.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+        <div class="collection-item">
+          <img
+            src="Images/FemaleTrainers/femaleTrainer15.jpg"
+            alt=""
+            class="collection-img"
+          />
+          <h3 class="collection-item-name"></h3>
+          <h3 class="collection-item-price"></h3>
+          <a href="" class="collection-view-btn">view</a>
+        </div>
+      </div>
     </main>
     <!-----------------------------
           Footer With Icons
